--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amna Asif — Portfolio</title>
+  <title>Joe Kikoloff — Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -24,8 +24,8 @@
           <text x="50%" y="54%" text-anchor="middle" font-size="44" font-family="Arial, Helvetica, sans-serif" fill="#ffffff" dy=".35em">AA</text>
         </svg>
       </div>
-      <h1 class="name">Amna Asif</h1>
-      <p class="title">PhD, Computer Science</p>
+      <h1 class="name">Joe Kikoloff</h1>
+      <p class="title">BSc, Computer Science</p>
     </aside>
 
     <main class="content">
@@ -41,7 +41,7 @@
   <article class="workshop-card">
     <h3>Workshop 2</h3>
     <p><strong>Description:</strong> Short description or key outcomes.</p>
-    <p><strong>Add link to submission:</strong> <a href="#">Link here</a></p>
+    <p><strong>Add link to submission:</strong> <a href="https://www.figma.com/design/IlIRfPoOO5CfF5V2OPBucr/Portfolio-Design--Community-?node-id=16-6&t=dJf0Zlkdc44PQrrM-1">Link here</a></p>
   </article>
 
   <article class="workshop-card">
