--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 
   <footer class="footer">
-    <p>Contact me on <a href="mailto:a.asif2@lancaster.ac.uk">a.asif2@lancaster.ac.uk</a></p>
+    <p>Contact me on <a href="mailto:j.kikoloff@lancaster.ac.uk">j.kikoloff@lancaster.ac.uk</a></p>
   </footer>
 </body>
 </html>
