--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <article class="workshop-card">
     <h3>Workshop 1</h3>
     <p><strong>Description:</strong> Short description or key outcomes.</p>
-    <p><strong>Add link to submission:</strong> <a href="#">Link here</a></p>
+    <p><strong>Add link to submission:</strong> <a href="https://joekikoloff.github.io/Personal-Portfolio/">Link here</a></p>
   </article>
 
   <article class="workshop-card">
