--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <div class="grid">
   <article class="workshop-card">
     <h3>Workshop 1</h3>
-    <p><strong>Description:</strong> Short description or key outcomes.</p>
+    <p><strong>Description:</strong> Personal Portfolio Page.</p>
     <p><strong>Add link to submission:</strong> <a href="https://joekikoloff.github.io/Personal-Portfolio/">Link here</a></p>
   </article>
 
   <article class="workshop-card">
     <h3>Workshop 2</h3>
-    <p><strong>Description:</strong> Short description or key outcomes.</p>
+    <p><strong>Description:</strong> A sample portfolio was analyzed to identify common design and content issues, after which a redesigned version was created with clearer layout, stronger visual hierarchy, and improved consistency. The exercise concluded with a brief reflection explaining the design decisions made.</p>
     <p><strong>Add link to submission:</strong> <a href="https://www.figma.com/design/IlIRfPoOO5CfF5V2OPBucr/Portfolio-Design--Community-?node-id=16-6&t=dJf0Zlkdc44PQrrM-1">Link here</a></p>
   </article>
 
