--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <article class="workshop-card">
     <h3>Workshop 2</h3>
-    <p><strong>Description:</strong> A sample portfolio was analyzed to identify common design and content issues, after which a redesigned version was created with clearer layout, stronger visual hierarchy, and improved consistency. The exercise concluded with a brief reflection explaining the design decisions made.</p>
+    <p><strong>Description:</strong> This workshop involved reviewing a sample portfolio and redesigning it in Figma to improve clarity, layout, and visual consistency.</p>
     <p><strong>Add link to submission:</strong> <a href="https://www.figma.com/design/IlIRfPoOO5CfF5V2OPBucr/Portfolio-Design--Community-?node-id=16-6&t=dJf0Zlkdc44PQrrM-1">Link here</a></p>
   </article>
 
