--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <article class="workshop-card">
     <h3>Workshop 5</h3>
     <p><strong>Description:</strong> Short description or key outcomes.</p>
-    <p><strong>Add link to submission:</strong> <a href="#">Link here</a></p>
+    <p><strong>Add link to submission:</strong> <a href="https://docs.google.com/presentation/d/1q4RO9ADx18IKRx5r8gJ70DibtICAUORw0xQU6-sUnro/edit?usp=sharing">Link here</a></p>
   </article>
 
   <article class="workshop-card">
