--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <article class="workshop-card">
     <h3>Workshop 7</h3>
     <p><strong>Description:</strong> Short description or key outcomes.</p>
-    <p><strong>Add link to submission:</strong> <a href="#">Link here</a></p>
+    <p><strong>Add link to submission:</strong> <a href="https://moustafariad7.github.io/Personal-Portfolio/Images/Workshop7.pdf">Link here</a></p>
   </article>
 
   <article class="workshop-card">
