--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <article class="workshop-card">
     <h3>Workshop 5</h3>
-    <p><strong>Description:</strong> Short description or key outcomes.</p>
+    <p><strong>Description:</strong> Story Board Presentation.</p>
     <p><strong>Add link to submission:</strong> <a href="https://docs.google.com/presentation/d/1q4RO9ADx18IKRx5r8gJ70DibtICAUORw0xQU6-sUnro/edit?usp=sharing">Link here</a></p>
   </article>
 
@@ -70,7 +70,7 @@
 
   <article class="workshop-card">
     <h3>Workshop 7</h3>
-    <p><strong>Description:</strong> Short description or key outcomes.</p>
+    <p><strong>Description:</strong> Usability Testing.</p>
     <p><strong>Add link to submission:</strong> <a href="https://moustafariad7.github.io/Personal-Portfolio/Images/Workshop7.pdf">Link here</a></p>
   </article>
 
