--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
   <article class="workshop-card">
     <h3>Workshop 8</h3>
-    <p><strong>Description:</strong> Short description or key outcomes.</p>
-    <p><strong>Add link to submission:</strong> <a href="#">Link here</a></p>
+    <p><strong>Description:</strong> Evaluated the presented application using heuristic methods.</p>
+    <p><strong>Add link to submission:</strong> <a href="https://drive.google.com/file/d/1DWUWISfA10my9-I_Wz4aoP44Vo9Wqn9y/view?usp=sharing">Link here</a></p>
   </article>
 </div>
 
